@@ -1,0 +1,3 @@
+INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`, `type`, `locked`, `verifycodes`, `options`, `help`) 
+    VALUES 
+        (2600,'main','security','cookie_salt','','Secret Cookie Salt','text',0,'','','\"Cookie Salt\" is a secret phrase that only you should know. This is used in combination with other variables to generate a secret key for certain cookie information to help secure cookies on client browsers (cookie data is encrypted).\r\n\r\nWhile encryption will help protect user data on the client side, using this feature may slow down website requests on your webserver since client cookie data has to be decrypted on every page request. If you want to enable encryption please test it under load first to see if your server will suffer as a result of it.\r\n\r\n<b>Recommendation:</b> Enter a short sentence that only you would know.');
