@@ -64,6 +64,7 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
         (2584,'theme',NULL,'root_img_url','','Images: Absolute root URL','text',0,'','','Absolute URL for images. This should match up to the location of the \"Absolute root for images\" setting. So the images can be referenced within the theme output correctly.\r\n\r\nIf any of the \"Image\" URL settings are left blank they will use this setting as their root.\r\n\r\n<b>Recommendation:</b> Leave blank for default (auto-discovered)'),
         (2596,'main','security','csrf_protection','0','Enable CSRF Protection?','boolean',0,'BN','','CSRF (Cross-Site Request Forgeries) Attacks are malicious attempts from hackers to submit unauthenticated requests to forms on your website. This threat is a minimal concern for PsychoStats but all security threats should be taken seriously. The downside to having this enabled is sometimes you may see fatal errors in form submissions if you try to reload or wait too long to submit a form.\r\n\r\n<b>Recommendation:</b> Enabled\r\n\r\n<b>Note:</b> This functionality is currently not working as intended and offers no additional protection at this time.'),
         (2598,'main','security','cookie_life','7200','Maximum idle cookie time','text',0,'BN','size=5','Maximum number of <b>seconds</b> a user\'s session cookie can be idle. values less than 60 seconds will be ignored. A session that is logged in and idle for longer than this value will automatically be logged out.\r\n\r\n<b>Recommendation:</b> 1 hour (3600 seconds)'),
+        (2600,'main','security','cookie_salt','','Secret Cookie Salt','text',0,'','','\"Cookie Salt\" is a secret phrase that only you should know. This is used in combination with other variables to generate a secret key for certain cookie information to help secure cookies on client browsers (cookie data is encrypted).\r\n\r\nWhile encryption will help protect user data on the client side, using this feature may slow down website requests on your webserver since client cookie data has to be decrypted on every page request. If you want to enable encryption please test it under load first to see if your server will suffer as a result of it.\r\n\r\n<b>Recommendation:</b> Enter a short sentence that only you would know.'),
         (2601,'theme','permissions','show_admin','1','Show Admin Link?','boolean',0,'','','If enabled the \'Admin\' link at the top of the stats will be visible to all users. This does not prevent the admin URL from working it merely prevents the link from appearing in the users browser.\r\n\r\n<b>Note:</b> This option relies on the theme supporting this configuration setting. A theme can either choose to always show the link, use this setting, or never show the link. If you use third party themes then verify your settings are being applied properly. You may wish to contact the theme author if there are any problems.'),
         (2604,'theme','permissions','show_version','1','Show PsychoStats Version?','boolean',0,'','','Should the PsychoStats version in the footer of all pages be displayed?'),
         (2605,'main',NULL,'base_url','','Base Stats URL','text',0,'','','The base URL of your stats. This needs to be a fully qualified URL (ie: you need http://)\r\n\r\nThis is not the same as your \"Home\" URL and should have been configured when you installed PsychoStats.'),
