@@ -191,8 +191,7 @@ div#ps-seasons_h-dropdown {
 	overflow: hidden;
 	z-index: 65535;
 }
-#ps-login-popup #ps-login-inner,
-#ps-search-popup #ps-search-inner
+#ps-login-popup #ps-login-inner
 {
 	margin: 33px 10px 0 10px;
 	font-size: 8pt;
@@ -261,6 +260,7 @@ div#ps-login-inner {
 	border: 1px solid black;
 	width: 300px;
 	font-size: 110%;
+	z-index: 10000;
 }
 
 /* --- OVERALL SEARCH POPUP --------------------------------------------- */
