@@ -98,6 +98,7 @@
 	<label><#Username#></label>
 	<input id="username" name="username" type="text" class="field">
 	<input name="submit" value="1" type="hidden">
+	<input name="key" value="{$form_key}" type="hidden">
 	</p>
 	<p>
 	<label><#Password#></label>
