@@ -268,6 +268,7 @@ div#ps-login-inner h4 {
 	border: 1px solid #342b24;
 	width: 300px;
 	font-size: 110%;
+	z-index: 10000;
 }
 
 /* --- OVERALL SEARCH POPUP --------------------------------------------- */
